# kata

./: README.md
real-python/asyncio/: summer.py  theory.py
real-python/decorators/: examples.py  main.py  sugar.py
real-python/decorators/decorators/: decorators.py
real-python/django-portfolio/portfolio/: settings.py  urls.py
real-python/django-portfolio/projects/: urls.py  views.py
real-python/func-prog/: data.md  futures.py  main.py  parallel.py
real-python/modules/intro/: fact.py  mod.py
real-python/modules/pkg/sub1/: mod1.py  (+2 more)
real-python/oop/constructors/: ab_classes.py  custom_new_class.py  distance.py  greeter.py  pets.py  point.py  singleton.py
real-python/oop/data/: basic.py  immutable.py  intro.py
real-python/oop/inheritance_composition/: rectangle_square.demo.py  representations.py
real-python/oop/intro/: car.py  main.py  my_class.py
real-python/oop/metaclasses/: basic_meta.py  intro.py  sub.py
real-python/oop/properties/: circle.py  circle_2.py  circle_cache_stacked.py  circle_cached.py  circle_cached2.py  circle_cached_property.py  circle_log.py  persons.py  point.py  point_ro.py  point_val.py  users.py
real-python/oop/super/: mixin.py  mulitple.py  shapes.py
real-python/tdd/: pyproject.toml  requirements.txt
real-python/tdd/.circleci/: config.yml
real-python/threading/: 03-thread.py  04-daemon.py  05-join.py  06-main_threads.py  07-thread_pool.py  09-account.py  10-lock.py  11-more_locks.py  12-prodcom.py  13-queue.py  eloop.py  multi.py  synchronous.py  thread.py  threaded.py
real-python/webscrape/rp-poetry/: pyproject.toml
(+31 files in other folders)
