[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Anthony Andras <anthony.andras@andras.com>"]
readme = "README.md"
packages = [{include = "rp_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
